--- a/IOSOHF15App/Info.plist
+++ b/IOSOHF15App/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>41</string>
+	<string>60</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -27,6 +27,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>gdsgkldsjslkgds</string>
+	<key>NSLocationUsageDescription</key>
+	<string>gsgdsg</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>gsdgkjdsklsjlk</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
